--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,12 +9,12 @@ plugins {
 
 android {
     namespace 'com.example.whatsmyartworth'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.example.whatsmyartworth"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -44,13 +44,14 @@ android {
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.10.0'
+    implementation "io.coil-kt:coil-compose:2.4.0"
+    implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.camera:camera-view:1.2.2'
-    implementation 'com.google.firebase:firebase-storage-ktx:20.1.0'
+    implementation 'androidx.camera:camera-view:1.3.0'
+    implementation 'com.google.firebase:firebase-storage-ktx:20.3.0'
+    implementation 'com.google.firebase:firebase-database-ktx:20.3.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -61,9 +62,9 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
 
     //CameraX
-    implementation "androidx.camera:camera-camera2:1.3.0-alpha05"
-    implementation "androidx.camera:camera-lifecycle:1.3.0-alpha05"
-    implementation "androidx.camera:camera-viewfinder:1.3.0-alpha05"
+    implementation "androidx.camera:camera-camera2:1.4.0-alpha02"
+    implementation "androidx.camera:camera-lifecycle:1.4.0-alpha02"
+    implementation "androidx.camera:camera-viewfinder:1.4.0-alpha02"
 
     implementation("io.coil-kt:coil:2.3.0")
 
